--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
